a. Use valueOf instead of new for primitive wrapper class b. Fix a call to equals() comparing different types
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@1075226 13f79535-47bb-0310-9956-ffa450edef68